--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/aos": "^3.0.7",
+    "@types/three": "^0.167.1",
     "aos": "^2.3.4",
     "lucide-react": "^0.416.0",
     "next": "14.2.5",
@@ -17,7 +18,8 @@
     "react-dom": "^18",
     "react-lottie-player": "^2.1.0",
     "sharp": "^0.33.4",
-    "tailwind-merge": "^2.4.0"
+    "tailwind-merge": "^2.4.0",
+    "three": "^0.167.0"
   },
   "devDependencies": {
     "@types/node": "^20",
