--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.52.1",
     "react-lottie-player": "^2.1.0",
     "sharp": "^0.33.4",
     "tailwind-merge": "^2.4.0",
