--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/aos": "^3.0.7",
     "@types/three": "^0.167.1",
     "@vercel/analytics": "^1.3.1",
+    "@vercel/speed-insights": "^1.0.12",
     "aos": "^2.3.4",
     "lucide-react": "^0.416.0",
     "next": "14.2.5",
