--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@types/aos": "^3.0.7",
+    "@types/locomotive-scroll": "^4.1.3",
     "@types/three": "^0.167.1",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
     "aos": "^2.3.4",
+    "locomotive-scroll": "^5.0.0-beta.13",
     "lucide-react": "^0.416.0",
     "next": "14.2.5",
     "react": "^18",
