--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@types/aos": "^3.0.7",
     "@types/locomotive-scroll": "^4.1.3",
+    "@types/nodemailer": "^6.4.15",
+    "@types/react-input-mask": "^3.0.5",
+    "@types/react-vertical-timeline-component": "^3.3.6",
     "@types/three": "^0.167.1",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
@@ -18,10 +21,15 @@
     "locomotive-scroll": "^5.0.0-beta.13",
     "lucide-react": "^0.416.0",
     "next": "14.2.5",
+    "nodemailer": "^6.9.14",
+    "polished": "^4.3.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
+    "react-hot-toast": "^2.4.1",
+    "react-input-mask": "^2.0.4",
     "react-lottie-player": "^2.1.0",
+    "react-vertical-timeline-component": "^3.6.0",
     "sharp": "^0.33.4",
     "tailwind-merge": "^2.4.0",
     "three": "^0.167.0"
