--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
     "@types/aos": "^3.0.7",
     "@types/locomotive-scroll": "^4.1.3",
     "@types/nodemailer": "^6.4.15",
@@ -32,7 +33,8 @@
     "react-vertical-timeline-component": "^3.6.0",
     "sharp": "^0.33.4",
     "tailwind-merge": "^2.4.0",
-    "three": "^0.167.0"
+    "three": "^0.167.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
